--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
-font-family: 'Rubik',
-sans-serif;
+  font-family: 'Rubik',
+  sans-serif;
+
+
 }
 
 .App-logo {
@@ -65,9 +67,15 @@ sans-serif;
 
 .navbar-item {
   font-size: 22px;
-  margin-right: 25px
+  margin-right: 25px;
 }
-
+.icons {
+  display: inline-block;
+  font-size: 20px;
+  margin: 0 5px 0 5px;
+  
+  
+}
 .second {
   display: flex;
   position: absolute;
@@ -96,6 +104,7 @@ sans-serif;
   color:#fff;
 }
 .login{
+  z-index: 9999;
   width: 60%;
   display: flex;
   flex-direction: column;
@@ -109,8 +118,32 @@ sans-serif;
 .login-page{
   width: 100%;
   display: flex;
+  height: max-content;
   justify-content: center;
   
+}
+.notification{
+  font-size: 40px;
+  display: flex;
+  width: 60%;
+  position: absolute;
+  left: 20%;
+  top :25%;
+  right: 20%;
+  height: 300px;
+  border-radius: 45px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  flex-direction: column;
+}
+.btn-ok {
+  font-size: 20px;
+  padding: 3px 40px;
+  border-radius: 5px;
+}
+.btn-ok:hover {
+  background-color: green;
 }
 
 .submit-login{
@@ -203,6 +236,9 @@ button{
 }
 .comment{
   margin-right: 20px;
+  border: 1px solid #333;
+  border-radius: 5px;
+  padding: 5px;
 }
 td{
   background-color:white !important
@@ -270,8 +306,78 @@ input[type='text'] {
     margin-top: 25px;
     flex-direction: column;
 }
+
 .new-topic{
     width: 80%;
 
     margin-bottom: 5px;
+}
+.add-category-page {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+    flex-direction: column;
+}
+.new-category {
+  width: 80%;
+
+  margin-bottom: 5px;
+}
+.add-addidea-page {
+  width: 100%;
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+    flex-direction: column;
+}
+
+.new-addidea {
+  width: 80%;
+
+  margin-bottom: 5px;
+}
+.home-page {
+  width: 100%;
+  height: 400px;
+}
+
+.home-img{
+  width: 80%;
+}
+.footer-page {
+  position: fixed;
+  bottom: -2%;
+  width: 100%;
+  
+  background: linear-gradient(to right, #33cc33 0%, #99ff99 100%);
+  margin-top: 100px;
+}
+
+.fotter-list{
+  display: inline-block;
+  text-align: left;
+  width: 20%;
+  
+}
+.fotter-list ul li {
+  list-style: none;
+  margin: 5px 10px 5px 40px;
+    border-right: 1px solid rgba(0, 0, 0, 0.3);
+    
+}
+.footer-name{
+
+  font-size: 30px;
+  
+  border-bottom: 2px solid #cbe5a9;
+  
+  margin: 10px 0px 10px 30px;
+}
+
+.bg_green{
+  color: #99ff99 !important;
+}
+.bg_red{
+  color: red !important;
 }
